[tool.poetry]
name = "djmix"
version = "0.3.1"
description = ""
authors = ["Taejun Kim <taejun@kaist.ac.kr>"]
include = [
    "dataset/djmix-dataset.json.gz"
]


[tool.poetry.dependencies]
python = ">=3.7,<3.11"
yt-dlp = "*"
pydantic = "^1.10.2"

librosa = { version = "^0.9.2", optional = true }
madmom = { version = "^0.16.1", optional = true }
joblib = { version = "^1.2.0", optional = true }
scikit-image = { version = "^0.19.3", optional = true }
pandas = { version = "^1.5.2", optional = true }
pytsmod = { version = "^0.3.6", optional = true }
pydub = { version = "^0.25.1", optional = true }
cvxpy = { version = "^1.2.2", optional = true }
matplotlib = { version = "^3.6.2", optional = true }


[tool.poetry.extras]
tools = [
    "librosa",
    "madmom",
    "joblib",
    "scikit-image",
    "pandas",
    "pytsmod",
    "pydub",
    "cvxpy",
    "matplotlib",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
